@@ -550,6 +550,60 @@ replace restart {
 } if notUsed('iy'), notUsed('hl')
 
 replace restart {
+	ld	iy, #%1
+	add	iy, sp
+	ld	%2, %3 (iy)
+} by {
+	; peephole 49b used hl instead of iy.
+	ld	hl, #%1+%3
+	add	hl, sp
+	ld	%2, (hl)
+} if notUsed('iy'), notUsed('hl')
+
+replace restart {
+	ld	iy, #%1
+	add	iy, sp
+	ld	%2, 0 (iy)
+	ld	%3, 1 (iy)
+} by {
+	; peephole 49c used hl instead of iy.
+	ld	hl, #%1
+	add	hl, sp
+	ld	%2, (hl)
+	inc	hl
+	ld	%3, (hl)
+} if notUsed('iy'), notUsed('hl')
+
+replace restart {
+	ld	iy, #%1
+	add	iy, sp
+	ld	l, 0 (iy)
+	ld	h, 1 (iy)
+} by {
+	; peephole 49d used hl instead of iy.
+	ld	hl, #%1
+	add	hl, sp
+	ld	a, (hl)
+	inc	hl
+	ld	h, (hl)
+	ld	l, a
+} if notUsed('iy'), notUsed('a')
+
+replace restart {
+	ld	iy, #%1
+	add	iy, sp
+	ld	0 (iy), #%2
+	ld	1 (iy), #%3
+} by {
+	; peephole 49e used hl instead of iy.
+	ld	hl, #%1
+	add	hl, sp
+	ld	(hl), #%2
+	inc	hl
+	ld	(hl), #%3
+} if notUsed('iy'), notUsed('hl')
+
+replace restart {
 	ld	%1,(hl)
 	or	a,%1
 } by {
